--- a/ui/views/home.html
+++ b/ui/views/home.html
@@ -55,6 +55,33 @@
       <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
     </header>
 
+    <!-- <div class="notifications">
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+    </div> -->
+
     <section class="home-page">
       <div class="welcome-info">
         <div class="home-info">
