--- a/ui/static/css/home.css
+++ b/ui/static/css/home.css
@@ -71,7 +71,7 @@
   gap: 20px;
   padding-top: 50px;
   padding-bottom: 50px;
-  color: lightblue;
+  color: #6291de;
 }
 
 .latest-courses .title {
