--- a/ui/views/contact.html
+++ b/ui/views/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/auth.css" />
+    <link rel="stylesheet" href="../static/css/contact.css" />
     <link
       rel="shortcut icon"
       href="../static/images/favicon.ico"
@@ -55,31 +55,75 @@
       <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
     </header>
 
-    <section class="auth-page">
-      <form method="post" class="login-form">
-        <div class="auth-title">Sign In</div>
-        <div class="input-field">
-          <label for="password">Email:</label>
-          <i class="fa-solid fa-envelope"></i>
+    <!-- <div class="notifications">
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+      <div class="notification">
+        <i class="fa-solid fa-circle-info"></i>
+        <span
+          >This is a test notificationThis is a test notificationThis is a test
+          notificationThis is a test notificationThis is a test notificationThis
+          is a test notification</span
+        >
+      </div>
+    </div> -->
+
+    <section class="contact-page">
+      <div class="find-us">
+        <div class="title">Find us at</div>
+        <div class="options">
+          <div class="option">
+            <i class="fa-solid fa-envelope"></i>
+            <div class="name">Email</div>
+            <div class="value">kristiqn3456@gmail.com</div>
+          </div>
+          <div class="option">
+            <i class="fa-solid fa-location-crosshairs"></i>
+            <div class="name">Location</div>
+            <div class="value">Petrich, Bulgaria</div>
+          </div>
+          <div class="option">
+            <i class="fa-solid fa-phone"></i>
+            <div class="name">Phone</div>
+            <div class="value">012 345 6789</div>
+          </div>
+        </div>
+      </div>
+      <div class="separator">OR</div>
+      <div class="find-us">
+        <div class="title">Get in touch with us through this form</div>
+        <form class="contact-form">
+          <input type="text" name="name" id="name" placeholder="Your name" />
           <input
             type="email"
             name="email"
             id="email"
-            placeholder="Enter your email address"
+            placeholder="Your email adress"
           />
-        </div>
-        <div class="input-field">
-          <label for="password">Password:</label>
-          <i class="fa-solid fa-lock"></i>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            placeholder="Enter your password"
-          />
-        </div>
-        <button type="submit">Sign In</button>
-      </form>
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Your message"
+          ></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
     </section>
 
     <footer>
