--- a/ui/views/home.html
+++ b/ui/views/home.html
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="copyright">
-        <span>&copy; 2023 LinguLearn. All rights reserved.</span>
+        <span>&copy; 2023 LinguaLearn. All rights reserved.</span>
         <span
           >Designed & Developed by
           <a href="https://github.com/kristiyanpts">Kristiyan Petsanov</a></span
