add courses page

--- a/ui/views/courses.html
+++ b/ui/views/courses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/home.css" />
+    <link rel="stylesheet" href="../static/css/courses.css" />
     <link
       rel="shortcut icon"
       href="../static/images/favicon.ico"
@@ -82,44 +82,45 @@
       </div>
     </div> -->
 
-    <section class="home-page">
-      <div class="welcome-info">
-        <div class="home-info">
-          <div class="title">
-            Learn your dream language fast, easy and free!
-          </div>
+    <section class="courses-page">
+      <div class="courses-info">
+        <img src="../static/images/about-courses.png" alt="" srcset="" />
+        <div class="info">
+          <div class="title">Welcome to LinguaLearn</div>
           <div class="desc">
-            Join our free courses and start learning your dream language today.
-            Register to start!
+            LinguaLearn was created to help you learn the language of your
+            dreams for free. Our teachers are nice and friendly so you shouldnt
+            be worried about asking questions. They are the best there is.
+            Before choosing the language you want to learn, get familiar with
+            our teachers!
           </div>
-          <div class="controls">
-            <a href="">Register</a>
-            <a href="">Available Courses</a>
+          <a href="">Our Teachers</a>
+        </div>
+      </div>
+      <div class="courses">
+        <div class="title">Our Courses</div>
+        <div class="filters">
+          <form class="filter-search">
+            <input
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Search by name"
+            />
+            <button type="submit">
+              <i class="fa-solid fa-paper-plane"></i>
+            </button>
+          </form>
+          <div class="separator">OR</div>
+          <div class="level-filters">
+            <button>All Courses</button>
+            <button>Entry Level</button>
+            <button>Mid Level</button>
+            <button>Advanced Level</button>
+            <button>Expert Level</button>
           </div>
         </div>
-        <img src="../static/images/home-page.png" alt="" />
-      </div>
-      <div class="latest-courses">
-        <span class="title">Latest Courses</span>
-        <div class="courses">
-          <div class="course">
-            <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-              alt=""
-            />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
-            </div>
-          </div>
+        <div class="course-items">
           <div class="course">
             <img
               src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
