--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   background-color: white;
   font-family: "Inter", sans-serif;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 header {
