--- a/ui/views/login.html
+++ b/ui/views/login.html
@@ -79,10 +79,13 @@
           />
         </div>
         <button type="submit">Sign In</button>
+        <div class="reffer">
+          Haven't created an account yet? <a href="">Register</a>
+        </div>
       </form>
     </section>
 
-    <footer>
+    <footer style="position: absolute; bottom: 0">
       <div class="contact-info">
         <div class="number"><i class="fa-solid fa-phone"></i> 012 345 6789</div>
         <div class="location">
