--- a/ui/views/teachers.html
+++ b/ui/views/teachers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/home.css" />
+    <link rel="stylesheet" href="../static/css/teachers.css" />
     <link
       rel="shortcut icon"
       href="../static/images/favicon.ico"
@@ -82,114 +82,77 @@
       </div>
     </div> -->
 
-    <section class="home-page">
-      <div class="welcome-info">
-        <div class="home-info">
-          <div class="title">
-            Learn your dream language fast, easy and free!
-          </div>
+    <section class="teachers-page">
+      <div class="teachers-info">
+        <img src="../static/images/teacher-info.png" alt="" srcset="" />
+        <div class="info">
+          <div class="title">Meet the best teachers there is</div>
           <div class="desc">
-            Join our free courses and start learning your dream language today.
-            Register to start!
+            LinguaLearn has the best teachers there could be to help you improve
+            your language skills and learn new things. You won't be disappointed
+            from their teaching. Are you a qualified language teacher? If you
+            are and you want to join our team and make peoples dream come true,
+            click the button below!
           </div>
-          <div class="controls">
-            <a href="">Register</a>
-            <a href="">Available Courses</a>
-          </div>
+          <a href="">Start Teaching</a>
         </div>
-        <img src="../static/images/home-page.png" alt="" />
       </div>
-      <div class="courses">
-        <div class="title">Latest Courses</div>
-        <div class="course-items">
-          <div class="course">
+      <div class="teachers">
+        <div class="title">Our Teachers</div>
+        <div class="filters">
+          <form class="filter-search">
+            <input
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Search by name"
+            />
+            <button type="submit">
+              <i class="fa-solid fa-paper-plane"></i>
+            </button>
+          </form>
+        </div>
+        <div class="teacher-items">
+          <div class="teacher">
             <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+              src="https://i.guim.co.uk/img/media/bc12099e16c5e0a7ed7b1e63687dac6dd71ff13b/305_331_2800_1680/master/2800.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3d0d6772b03019da00428fe5537404b5"
               alt=""
             />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
+            <div class="teacher-info">
+              <div class="name">Kristiyan Petsanov</div>
+              <a href="">View Profile</a>
             </div>
           </div>
-          <div class="course">
-            <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-              alt=""
-            />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
+          <div class="teacher">
+            <div class="teacher-image">
+              <img
+                src="https://i.guim.co.uk/img/media/bc12099e16c5e0a7ed7b1e63687dac6dd71ff13b/305_331_2800_1680/master/2800.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3d0d6772b03019da00428fe5537404b5"
+                alt=""
+              />
+            </div>
+            <div class="teacher-info">
+              <div class="name">Kristiyan Petsanov</div>
+              <a href="">View Profile</a>
             </div>
           </div>
-          <div class="course">
+          <div class="teacher">
             <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+              src="https://www.masslive.com/resizer/kNl3qvErgJ3B0Cu-WSBWFYc1B8Q=/arc-anglerfish-arc2-prod-advancelocal/public/W5HI6Y4DINDTNP76R6CLA5IWRU.jpeg"
               alt=""
             />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
+            <div class="teacher-info">
+              <div class="name">Kristiyan Petsanov</div>
+              <a href="">View Profile</a>
             </div>
           </div>
-          <div class="course">
+          <div class="teacher">
             <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+              src="https://engineering.unl.edu/images/staff/Kayla-Person.jpg"
               alt=""
             />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
-            </div>
-          </div>
-          <div class="course">
-            <img
-              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-              alt=""
-            />
-            <div class="course-info">
-              <div class="name">Spanish Course</div>
-              <div class="period">
-                <div class="start">
-                  <i class="fa-solid fa-circle-play"></i> 19-02-2023
-                </div>
-                <div class="duration">
-                  <i class="fa-solid fa-clock"></i> 6 months
-                </div>
-              </div>
-              <a href="">View More</a>
+            <div class="teacher-info">
+              <div class="name">Kristiyan Petsanov</div>
+              <a href="">View Profile</a>
             </div>
           </div>
         </div>
