--- a/ui/views/details.html
+++ b/ui/views/details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/teachers.css" />
+    <link rel="stylesheet" href="../static/css/details.css" />
     <link
       rel="shortcut icon"
       href="../static/images/favicon.ico"
@@ -82,83 +82,80 @@
       </div>
     </div> -->
 
-    <section class="teachers-page">
-      <div class="teachers-info">
-        <img src="../static/images/teacher-info.png" alt="" srcset="" />
-        <div class="info">
-          <div class="title">Meet the best teachers there is</div>
-          <div class="desc">
-            LinguaLearn has the best teachers there could be to help you improve
-            your language skills and learn new things. You won't be disappointed
-            from their teaching. Are you a qualified language teacher? If you
-            are and you want to join our team and make peoples dream come true,
-            click the button below!
-          </div>
-          <a href="">Start Teaching</a>
-        </div>
-      </div>
-      <div class="teachers">
-        <div class="title">Our Teachers</div>
-        <div class="filters">
-          <form class="filter-search">
-            <input
-              type="text"
-              name="search"
-              id="search"
-              placeholder="Search by name"
-            />
-            <button type="submit">
-              <i class="fa-solid fa-paper-plane"></i>
-            </button>
-          </form>
-        </div>
-        <div class="teacher-items">
-          <div class="teacher">
+    <section class="details-page">
+      <div class="course-item">
+        <div class="main-info">
+          <div class="left-side">
             <img
-              src="https://i.guim.co.uk/img/media/bc12099e16c5e0a7ed7b1e63687dac6dd71ff13b/305_331_2800_1680/master/2800.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3d0d6772b03019da00428fe5537404b5"
+              src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
               alt=""
             />
-            <div class="teacher-info">
-              <div class="name">Kristiyan Petsanov</div>
-              <a href="">View Profile</a>
-            </div>
           </div>
-          <div class="teacher">
-            <div class="teacher-image">
-              <img
-                src="https://i.guim.co.uk/img/media/bc12099e16c5e0a7ed7b1e63687dac6dd71ff13b/305_331_2800_1680/master/2800.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3d0d6772b03019da00428fe5537404b5"
-                alt=""
-              />
+          <div class="right-side">
+            <div class="name">Spanish Course</div>
+            <div class="desc-item">
+              <div class="title">Teacher:</div>
+              <div class="value"><a href="">Kristiyan Petsanov</a></div>
             </div>
-            <div class="teacher-info">
-              <div class="name">Kristiyan Petsanov</div>
-              <a href="">View Profile</a>
+            <div class="desc-item">
+              <div class="title">Difficulty:</div>
+              <div class="value">Mid Level</div>
             </div>
-          </div>
-          <div class="teacher">
-            <img
-              src="https://www.masslive.com/resizer/kNl3qvErgJ3B0Cu-WSBWFYc1B8Q=/arc-anglerfish-arc2-prod-advancelocal/public/W5HI6Y4DINDTNP76R6CLA5IWRU.jpeg"
-              alt=""
-            />
-            <div class="teacher-info">
-              <div class="name">Kristiyan Petsanov</div>
-              <a href="">View Profile</a>
+            <div class="desc-item">
+              <div class="title">Course Size:</div>
+              <div class="value">25</div>
             </div>
-          </div>
-          <div class="teacher">
-            <img
-              src="https://engineering.unl.edu/images/staff/Kayla-Person.jpg"
-              alt=""
-            />
-            <div class="teacher-info">
-              <div class="name">Kristiyan Petsanov</div>
-              <a href="">View Profile</a>
+            <div class="desc-item">
+              <div class="title">Spots:</div>
+              <div class="value">14</div>
+            </div>
+            <div class="desc-item">
+              <div class="title">Start Date:</div>
+              <div class="value">25/02/2023</div>
+            </div>
+            <div class="desc-item">
+              <div class="title">Duration:</div>
+              <div class="value">6 months</div>
             </div>
           </div>
         </div>
-        <div class="no-teachers">
-          There are currently no teachers registered. <br />
-          Check back later!
+        <div class="aditional-info">
+          <div class="desc-item">
+            <div class="title">Description</div>
+            <div class="value">
+              Mnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+              kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da
+              ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko
+              da ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs
+              ko da ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen
+              kurs ko da ti kajaMnogo interesen kurs ko da ti kajaMnogo
+              interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+              kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da
+              ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko
+              da ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs
+              ko da ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen
+              kurs ko da ti kajaMnogo interesen kurs ko da ti kajaMnogo
+              interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+              kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da
+              ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko
+              da ti kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs
+              ko da ti kajaMnogo interesen kurs ko da ti kaja
+            </div>
+          </div>
+          <div class="desc-item">
+            <div class="title">Schedule</div>
+            <div class="schedules">
+              <div class="schedule">1. Course Introduction</div>
+              <div class="schedule">2. Spanish Basics</div>
+              <div class="schedule">3. Spanish Advanced</div>
+            </div>
+          </div>
+        </div>
+        <div class="controls">
+          <a href="">Edit</a>
+          <a href="">Delete</a>
+          <!-- <a href="">Sign Up</a> -->
+          <!-- <span>You have already signed up for this course!</span> -->
         </div>
       </div>
     </section>
