--- a/ui/static/css/auth.css
+++ b/ui/static/css/auth.css
@@ -123,6 +123,9 @@
 .important-message {
   position: relative;
   text-align: center;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 .login-form {
