--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -11,11 +11,13 @@ body {
 }
 
 header {
-  width: 100%;
+  width: 98%;
   height: fit-content;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding-left: 1%;
+  padding-right: 1%;
 }
 
 header img {
@@ -468,6 +470,48 @@ footer .copyright a:hover {
   border: 1px solid white;
   background-color: #6291de;
 }
+
+.no-courses {
+  position: relative;
+  width: fit-content;
+  padding: 20px;
+  background-color: #6291de;
+  color: white;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 10px;
+}
+
+/* Start of loading bar */
+
+.loading-bar {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-bar span {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #6291de;
+}
+
+svg {
+  position: relative;
+  height: 150px;
+  width: 150px;
+}
+
+/* End of loading bar */
 
 @media only screen and (max-width: 1300px) {
   .courses-info img {
