--- a/ui/static/css/teachers.css
+++ b/ui/static/css/teachers.css
@@ -134,6 +134,21 @@
   background-color: #6291de;
 }
 
+.no-teachers {
+  position: relative;
+  width: fit-content;
+  padding: 20px;
+  background-color: #6291de;
+  color: white;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 10px;
+}
+
 @media only screen and (max-width: 1300px) {
   .teachers-info img {
     display: none;
