--- a/ui/views/courses.html
+++ b/ui/views/courses.html
@@ -211,6 +211,10 @@
             </div>
           </div>
         </div>
+        <!-- <div class="no-courses">
+          There are currently no courses available. <br />
+          Check back later!
+        </div> -->
       </div>
     </section>
 
