--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -114,7 +114,7 @@
 
       <div class="courses">
         <div class="title">Kris' Courses</div>
-        <div class="course-items">
+        <!-- <div class="course-items">
           <div class="course">
             <img
               src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
@@ -205,6 +205,9 @@
               <a href="">View More</a>
             </div>
           </div>
+        </div> -->
+        <div class="no-courses">
+          Kristiyan Petsanov is currently not teaching any courses!
         </div>
       </div>
     </section>
