--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -11,13 +11,13 @@ body {
 }
 
 header {
-  width: 98%;
+  width: 96%;
   height: fit-content;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 header img {
@@ -128,8 +128,8 @@ footer .copyright a:hover {
     display: flex;
   }
   header {
-    justify-content: space-between;
-    width: 99%;
+    /* justify-content: space-between; */
+    width: 94%;
   }
   .navlist {
     position: absolute;
